@@ -1075,8 +1075,8 @@ a widget that users commonly think of as a window. That is, an area of the
 display that is managed by the window manager and usually decorated with a
 title bar, and items to allow the user to close, resize and move the
 window. <literal>PyGTK</literal> provides two types of windows (see the
-<link linkend="gtk-window-type-constants">Window Type
-Constants</link> for more information).</para>
+<link linkend="gtk-window-type-constants">Window Type Constants</link>
+section for more information):</para>
 
     <variablelist>
       <varlistentry>
@@ -1550,34 +1550,8 @@ method.</para>
       <para>The <methodname>set_type_hint</methodname>() method sets the
 window type hint for the window to the value specified by
 <parameter>hint</parameter>. The value of <parameter>hint</parameter> must
-be one of:</para>
-
-      <variablelist>
-	<varlistentry>
-	  <term><literal>gtk.WINDOW_TYPE_HINT_NORMAL</literal></term>
-	  <listitem>
-	    <simpara>A normal toplevel window.</simpara>
-	  </listitem>
-	</varlistentry>
-	<varlistentry>
-	  <term><literal>gtk.WINDOW_TYPE_HINT_DIALOG</literal></term>
-	  <listitem>
-	    <simpara>A dialog window.</simpara>
-	  </listitem>
-	</varlistentry>
-	<varlistentry>
-	  <term><literal>gtk.WINDOW_TYPE_HINT_MENU</literal></term>
-	  <listitem>
-	    <simpara>A window used to implement a menu.</simpara>
-	  </listitem>
-	</varlistentry>
-	<varlistentry>
-	  <term><literal>gtk.WINDOW_TYPE_HINT_TOOLBAR</literal></term>
-	  <listitem>
-	    <simpara>A window used to implement toolbars. </simpara>
-	  </listitem>
-	</varlistentry>
-      </variablelist>
+be one of the <link linkend="gdk-window-type-hint-constants">Window Type
+Hint Constants</link>.</para>
 
       <para>By setting the type hint for the window, you allow the window
 manager to decorate and handle the window in a way which is suitable to the
@@ -1724,40 +1698,8 @@ gravity of the window to the value specified by
 <parameter>gravity</parameter>. The window gravity defines the meaning of
 coordinates passed to the <link
 linkend="method-gtkwindow--move"><methodname>move</methodname>()</link>
-method. The value of gravity must be one of:</para>
-
-      <itemizedlist>
-	<listitem>
-	  <simpara><literal>gtk.gdk.GRAVITY_NORTH_WEST</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.gdk.GRAVITY_NORTH</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.gdk.GRAVITY_NORTH_EAST</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.gdk.GRAVITY_WEST</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.gdk.GRAVITY_CENTER</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.gdk.GRAVITY_EAST</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.gdk.GRAVITY_SOUTH_WEST</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.gdk.GRAVITY_SOUTH</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.gdk.GRAVITY_SOUTH_EAST</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.gdk.GRAVITY_STATIC</literal></simpara>
-	</listitem>
-      </itemizedlist>
+method. The value of gravity must be one of the <link
+linkend="gdk-gravity-constants">Gravity Constants</link>.</para>
 
       <para>The default window gravity is
 <literal>gtk.gdk.GRAVITY_NORTH_WEST</literal> which will typically "do what
@@ -3000,35 +2942,9 @@ resizing a window from the edge specified by <parameter>edge</parameter>.
 The mouse button that started the resize is specified by
 <parameter>button</parameter>; the location, by
 <parameter>root_x</parameter> and <parameter>root_y</parameter>; and the
-time of the event, by <parameter>timestamp</parameter>. The value of edge
-must be one of:</para>
-
-      <itemizedlist>
-	<listitem>
-	  <simpara><literal>gtk.WINDOW_EDGE_NORTH_WEST</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.WINDOW_EDGE_NORTH</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.WINDOW_EDGE_NORTH_EAST</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.WINDOW_EDGE_WEST</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.WINDOW_EDGE_EAST</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.WINDOW_EDGE_SOUTH_WEST</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.WINDOW_EDGE_SOUTH</literal></simpara>
-	</listitem>
-	<listitem>
-	  <simpara><literal>gtk.WINDOW_EDGE_SOUTH_EAST</literal></simpara>
-	</listitem>
-      </itemizedlist>
+time of the event, by <parameter>timestamp</parameter>. The value of
+<parameter>edge</parameter> must be one of the <link
+linkend="gdk-window-edge-constants">Window Edge Constants</link>.</para>
 
       <para>This method is used if an application has window resizing
 controls. When <literal>PyGTK</literal> can support it, the resize will be
