@@ -1,3 +1,9 @@
+2004-12-07  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkwindow.xml (set_type_hint): Add reference to window type 
+	hint constants. Fixes #160669 (Gian Mario Tagliaretti)
+	(set_gravity, begin_resize_drag): Add reference to constants.
+
 2004-12-06  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtk-stock-items.xml Remove duplicate STOCK_WARNING.
